--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-<h2>I upload data visualization here:</h2>
-<h3>Visualizing crashes on a map with python and folium using destatis data</h3> 
-<p> repository can be found here: <a href="https://github.com/cuteredpwnda/visualize_crashes">Github</a></p>
-<h4>Dortmund:</h4>
-<p><a href="visualize_crashes\dortmund\bike&pedestriancrashes.html">Bike and pedestrian crashes in Dortmund (2019) </a></p>
-<p><a href="visualize_crashes\dortmund\bikecrashes.html">Bike crashes in Dortmund (2019)</a></p>
-<h4>Würzburg:</h4>
-<p><a href="visualize_crashes\würzburg\bikecrashes.html">Bike and pedestrian crashes in Würzburg (2017-2019) </a></p>
+<p>I'm hosted with GitHub Pages.<h1>Hello World</h1>
+    I'm hosted with GitHub Pages.
+    <h2>I upload data visualization here:</h2>
+    <h3>Visualizing crashes on a map with python and folium using destatis data</h3>
+     repository can be found here: <a href="https://github.com/cuteredpwnda/visualize_crashes">github</a>
+    <h4>Dortmund:</h4>
+    <a href="visualize_crashes\dortmund\bike&pedestriancrashes.html">Bike and pedestrian crashes in Dortmund (2019) </a>
+    <a href="visualize_crashes\dortmund\bikecrashes.html">Bike crashes in Dortmund (2019)</a>
+    <h4>Würzburg:</h4>
+    <a href="visualize_crashes\würzburg\bikecrashes.html">Bike and pedestrian crashes in Würzburg (2017-2019) </a>
+    </body>
+    </html></p>
 </body>
 </html>
